Fixed the Polyline Frames!!!! they are now on the outer side of the shell, wo when the frame is transparent it does not overlap with neither the datum nor the glazing. I still need to apply these changes to the polygon frames inside the Design menu though

--- a/src/app/core/core.component.sass
+++ b/src/app/core/core.component.sass
@@ -236,6 +236,10 @@
 .shellX
   stroke-linejoin: round
 
+.shellY
+  stroke-linejoin: round
+  stroke-align: outset
+
 .svgDesign
   width: 100%
   height: 100%
